Switching to lmodern and cleaning up

--- a/compilations/2017-BIN.tex
+++ b/compilations/2017-BIN.tex
@@ -1,5 +1,6 @@
 \documentclass[a5paper,twoside]{article}
 \usepackage[utf8]{inputenc}
+\usepackage{lmodern}
 \usepackage[T1]{fontenc}
 \usepackage[hungarian]{babel}
 
@@ -49,31 +50,31 @@
   \begin{songs}{}
     \begin{intersong*}\section*{Bevonulás}\end{intersong*}
     \input{songs/jojj-itt-az-ido.tex}
-    
+
     \begin{intersong*}\section*{Kyrie}\end{intersong*}
     \input{mass-songs/uram-irgalmazz-k159.tex}
-    
+
 %     \begin{intersong*}\section*{Zsoltár}\end{intersong*}
 %     \input{mass-songs/zsoltar.tex}
-    
+
     \begin{intersong*}\section*{Felajánlás}\end{intersong*}
     \input{songs/loyolai-szent-ignac-imaja.tex}
-    
+
     \begin{intersong*}\section*{Sanctus}\end{intersong*}
     \input{mass-songs/szent-vagy-k192.tex}
-    
+
     \begin{intersong*}\section*{Agnus Dei}\end{intersong*}
     \input{mass-songs/isten-baranya-k299.tex}
-    
+
     \begin{intersong*}\section*{Áldozás}\end{intersong*}
     \input{mass-songs/ket-kezemben-k119.tex}
     \input{songs/vizek-felett.tex}
     \input{songs/ott-lelegzel-a-fakban.tex}
-    
+
     \begin{intersong*}\section*{Kivonulás}\end{intersong*}
     \input{songs/indulj-es-menj.tex}
   \end{songs}
-  
+
   \newpage\null
   \pagenumbering{gobble}
   \vfill\hfill
