--- a/compilations/antiochia.tex
+++ b/compilations/antiochia.tex
@@ -1,5 +1,6 @@
 \documentclass[a5paper,twoside]{article}
 \usepackage[utf8]{inputenc}
+\usepackage{lmodern}
 \usepackage[T1]{fontenc}
 \usepackage[hungarian]{babel}
 
@@ -48,7 +49,7 @@
 
 \begin{document}
 
-  \begin{titlepage}  
+  \begin{titlepage}
     \pagenumbering{gobble}
     \setlength{\oddsidemargin}{-1.3cm}
 
@@ -62,7 +63,7 @@
   \pagenumbering{arabic}
 
   \versesep=12pt plus 3pt minus 5pt
-  
+
   \begin{songs}{titleidx}
     \input{songs.tex}
   \end{songs}
@@ -70,9 +71,9 @@
   To be continued...
   \vfill
   Benkő Matyitól kapott dalgyűjtemény alapján.
-  
+
   Készítette: Donkó István
-  
+
   ?Lektorálta: Nobilis Márió
 
 \end{document}
