--- a/compilations/temp.tex
+++ b/compilations/temp.tex
@@ -1,5 +1,6 @@
 \documentclass[a5paper,twoside]{article}
 \usepackage[utf8]{inputenc}
+\usepackage{lmodern}
 \usepackage[T1]{fontenc}
 \usepackage[hungarian]{babel}
 
@@ -10,9 +11,9 @@
 \usepackage[lyric]{songs}
 % \usepackage[slides]{songs}
 
-\title{Budaörsi Ifjúsági Nap - Mise}
+\title{Temp}
 % \author{Donkó István}
-\date{2017. március 18.}
+% \date{2017. március 18.}
 
 \setlength{\topmargin}{-1.5cm}
 
