Added 2017-orom-utja and related changes

--- a/songs/ebredj-ember.tex
+++ b/songs/ebredj-ember.tex
@@ -22,13 +22,13 @@
     Alle\[Am]luja, alle\[F]luja, al\[C]le\[Em]lu\[Am]ja!
     Alle\[Dm]luja, alle\[G]lu\[C]ja!
   \endchorus
-  
+
   \beginverse*
     {\nolyrics Két félhang emelkedés. \[A7]}
   \endverse
 
 %   \textnote{két félhang emelkedés}
-  
+
   \beginchorus
 %     {\nolyrics (két félhang emelkedés) \[A7]}
     Alle\[D]luja, alle\[G]lu\[D]ja!
@@ -43,9 +43,13 @@
   \endverse
 
 %   \beginverse
-%     Föltámadt Jézus, győztes király, elhozta nékünk az országát. 
+%     Föltámadt Jézus, győztes király, elhozta nékünk az országát.
 %     Jöjj Szentlélek, szállj közénk, hozz a mennyből szép, tiszta fényt!
 %   \endverse
+
+  \beginverse*
+    Refrén
+  \endverse
 
   \beginverse
     És az ^élet, ^íme, megjele^nt, ^ köztünk ^él Ő ^ Szentlelké^ben.
