--- a/songs/koszonom-jezus.tex
+++ b/songs/koszonom-jezus.tex
@@ -3,28 +3,28 @@
   \beginverse\memorize
     \[D] Köszönöm Jézus, köszönöm Jézus,
     Köszönöm U\[G]ram, hogy szeretsz en\[D]gem!
-    Köszönöm \[Hm]Jézus, köszönöm \[G]Jézus,
+    Köszönöm \[F#m]Jézus, köszönöm \[Hm]Jé\[G]zus,
     Köszönöm U\[D]ram, \[A] hogy szeretsz en\[D]gem! \[G] \[D]
   \endverse
 
   \beginverse
     ^ A Golgotára ment, és meghalt értem
     Köszönöm U^ram, hogy szeretsz en^gem!
-    Köszönöm ^Jézus, köszönöm ^Jézus,
+    A Golgo^tára ment, és meghalt ^ér^tem
     Köszönöm U^ram, ^ hogy szeretsz en^gem! ^ ^
   \endverse
 
   \beginverse
     ^ A harmadik napon, Ő feltámadott
     Köszönöm U^ram, hogy szeretsz en^gem!
-    Köszönöm ^Jézus, köszönöm ^Jézus,
+    A harma^dik napon, Ő fel^táma^dott
     Köszönöm U^ram, ^ hogy szeretsz en^gem! ^ ^
   \endverse
 
   \beginverse
     ^ Ó alleluja, ó alleluja
     Köszönöm U^ram, hogy szeretsz en^gem!
-    Köszönöm ^Jézus, köszönöm ^Jézus,
+    Ó alle^luja, ó alle^lu^ja
     Köszönöm U^ram, ^ hogy szeretsz en^gem! ^ ^
   \endverse
 
