2017-orom-utja release version

--- a/compilations/2017-orom-utja.tex
+++ b/compilations/2017-orom-utja.tex
@@ -36,7 +36,7 @@
 
   \begin{titlepage}
     \pagenumbering{gobble}
-    \setlength{\oddsidemargin}{-1.5cm}
+    \setlength{\oddsidemargin}{-1.6cm}
     \vspace*{6cm}
     {\let\newpage\relax\maketitle}
   \end{titlepage}
@@ -47,10 +47,13 @@
 
   \begin{songs}{}
     \input{songs/ebredj-ember.tex}
-    \input{songs/im-itt-jon-o.tex}
     \input{songs/koszonom-jezus.tex}
-    \input{songs/minden-mi-el.tex}
-    % \input{"../songs/"}
+    \input{songs/im-itt-jon-o.tex}
     \input{songs/foltamadt-alleluja.tex}
+    \input{songs/minden-mi-el.tex}
+    \input{songs/szentlelek-jojj.tex}
   \end{songs}
+
+  \pagenumbering{gobble}
+  \input{compilations/2017-orom-utja.txt}
 \end{document}
