--- a/songs/ebredj-ember.tex
+++ b/songs/ebredj-ember.tex
@@ -1,9 +1,8 @@
-% https://youtu.be/-DGzHCfmv5k alapján.
-
-\beginsong{Ébredj ember - !!}
+\beginsong{Ébredj ember}
 [
   li={https://youtu.be/-DGzHCfmv5k alapján.}
 ]
+  \versesep=12pt plus 3pt minus 8pt
 
   \ifchorded
     \beginverse*
@@ -24,7 +23,7 @@
   \endchorus
 
   \beginverse*
-    {\nolyrics Két félhang emelkedés. \[A7]}
+    {\nolyrics \echo{Két félhang emelkedés.} \[A7]}
   \endverse
 
 %   \textnote{két félhang emelkedés}
@@ -53,7 +52,11 @@
 
   \beginverse
     És az ^élet, ^íme, megjele^nt, ^ köztünk ^él Ő ^ Szentlelké^ben.
-    Hív Ő ^téged, ^ hogy élj ve^le, add át ^néki ^ a szíve^det / ?életed?!
+    Hív Ő ^téged, ^ hogy élj ve^le, add át ^néki ^ a szíve^det!
+  \endverse
+
+  \beginverse*
+    Refrén
   \endverse
 
 \endsong
