--- a/songs/minden-mi-el.tex
+++ b/songs/minden-mi-el.tex
@@ -1,4 +1,5 @@
 \beginsong{Minden mi él}[]
+  \versesep=12pt plus 3pt minus 8pt
 
   \beginchorus
     \[D]Minden mi él, csak Téged hirdet,
@@ -14,18 +15,30 @@
     \[A]A víz, a tűz \[A7]megannyi tiszta dallal!
   \endverse
 
+  \beginverse*
+    Refrén
+  \endverse
+
   \beginverse
     ^Dicsér a Föld, dicséri szent neved,
     ^Mint jó anyánk, táplál s ad eledelt.
     ^Virág, gyümölcs, zöld fű, fa, hegyvidék,
     ^Tó és folyó, ^síkság és büszke bérc!
   \endverse
-  
+
+  \beginverse*
+    Refrén
+  \endverse
+
   \beginverse
     ^A nagy világ létével énekel,
     ^Szavunkra vár, hogy hangja dal legyen.
     ^Zengjük tehát ég és föld énekét,
     ^Zengjük velük: ^nagy Isten áldott légy!
+  \endverse
+
+  \beginverse*
+    Refrén
   \endverse
 
 \endsong
