--- a/songs/szentlelek-jojj.tex
+++ b/songs/szentlelek-jojj.tex
@@ -1,8 +1,9 @@
-\beginsong{Szentlélek jöjj - !!}[]
+\beginsong{Szentlélek jöjj}[]
+  \versesep=12pt plus 3pt minus 12pt
 
   \ifchorded
     \beginverse*
-       {\nolyrics Előjáték: \[Em] \[D] \[D] \[Em] \[Em] \[D] \[D-Hm] \[Em]}
+       {\nolyrics Előjáték: \[Em] \[D] \[Hm] \[Em] \[D] \[Hm] \[Em]}
     \endverse
   \fi
 
@@ -20,7 +21,7 @@
     Jöjj, úgy ^várunk ^Rád!
   \endverse
 
-  \beginverse
+  \beginverse*
     Refrén
   \endverse
 
@@ -31,7 +32,7 @@
     Jöjj ke^gyelmed^del!
   \endverse
 
-  \beginverse
+  \beginverse*
     Refrén
   \endverse
 
@@ -42,7 +43,7 @@
     Báto^ríts min^ket!
   \endverse
 
-  \beginverse
+  \beginverse*
     Refrén \rep{2}
   \endverse
 
