Added jezus-nez-ram, watermark and some fixes

--- a/compilations/antiochia.tex
+++ b/compilations/antiochia.tex
@@ -12,7 +12,13 @@
 \usepackage[chorded]{songs}
 % \usepackage[lyric]{songs}
 
-\title{Budaörsi Antiochia dalgyűjtemény akkordokkal}
+\usepackage{draftwatermark}
+\SetWatermarkText{1. Minta}
+\SetWatermarkHorCenter{7cm}
+\SetWatermarkScale{0.8}
+\SetWatermarkLightness{0.9}
+
+% \title{Budaörsi Antiochia dalgyűjtemény akkordokkal}
 \author{Benkő Matyi - Donkó István}
 % \date{2017. február 5.}
 
@@ -74,6 +80,6 @@
 
   Készítette: Donkó István
 
-  ?Lektorálta: Nobilis Márió
+  ?Lektorálta: Nobilis Márió?
 
 \end{document}
