--- a/songs.tex
+++ b/songs.tex
@@ -6,11 +6,13 @@
 \input{songs/csak-jezusnak-szolgalok.tex}
 \input{songs/ebredj-ember.tex}
 \input{songs/feny-ami-bennem-eg.tex}
+\input{songs/foltamadt-alleluja.tex}
 \input{songs/ha-jon-az-ur.tex}
 \input{songs/hus-ver-templom.tex}
 \input{songs/im-itt-jon-o.tex}
 \input{songs/indulj-a-vilagba.tex}
 \input{songs/indulj-es-menj.tex}
+\input{songs/jezus-nez-ram.tex}
 \input{songs/jojj-itt-az-ido.tex}
 \input{songs/kicsiny-kis-fenyemmel.tex}
 \input{songs/kiraly-vagy.tex}
