--- a/songs/minden-nap.tex
+++ b/songs/minden-nap.tex
@@ -6,18 +6,26 @@
     \endverse
   \fi
 
-  \beginverse
+  \beginverse\memorize
     \[C] Mit is \[G]mondhatnék, \[Em] Te vagy, ki \[D]megváltottál,
     \[C] Drága \[G]véreddel \[Em] hófe\[D]hérre mostál,
     \[C] Minden\[G]em lettél, \[Em] tiéd az \[D]egész lényem,
     \[C] Ég a \[G]tűz bennem, \[Em] csak \[D]érted élek már!
   \endverse
 
+  \ifchorded
+    \beginverse*
+      {\nolyrics Közjáték: \[G] \[C] \[Em] \[D]}
+    \endverse
+  \fi
+
+% közjáték -> utána ugyanaz
+
   \beginverse
-    \[G] Minden \[C]nap, Uram, \[Em] ráál\[D]lok igédre,
-    \[G] Téged \[C]hívlak, \[Em] légy a \[D]segítségem,
-    \[G] Vezess \[C]át engem, \[Em] tovább a \[D]keskeny úton,
-    \[G] Add, hogy \[C]életem \[Em] a világban \[D]tüzet gyújtson!
+    ^ Minden ^nap, Uram, ^ ráál^lok igédre,
+    ^ Téged ^hívlak, ^ légy a ^segítségem,
+    ^ Vezess ^át engem, ^ tovább a ^keskeny úton,
+    ^ Add, hogy ^életem ^ a világban ^tüzet gyújtson!
   \endverse
 
   \beginchorus
