--- a/songs/ne-felj-mert-megvaltottalak.tex
+++ b/songs/ne-felj-mert-megvaltottalak.tex
@@ -6,7 +6,7 @@
     Karja\[Em]imba zárta\[A]lak,
     Örökre \[A7]enyém \[D]vagy! :/ \rep{2}
   \endchorus
-  
+
   \beginverse\memorize
     \[A]Viruló réteken \[D]át, \[G]hűs forrás fe\[A]lé vezetlek,
     \[Hm]Pásztorod va\[Em]gyok, elveszni \[A]senkit nem ha\[D]gyok.
@@ -15,12 +15,20 @@
     Amikor \[Hm]úgy ér\[Em]zed, nyomaszt a \[A7]é\[D]let.
   \endverse
 
+  \beginverse*
+    Refrén
+  \endverse
+
   \beginverse
     ^Nem taszítalak ^el, ^amikor vétke^zel,
     Irgalmat ^lelsz a szívem^ben, örök fe^léd a hűsé^gem,
     Amerre ^jársz, vé^dlek, nyomodba ^lé^pek.
     ^Nem rejtőzöm ^el, szeretet^lángom átö^lel,
     Ne félj, ha ^éjben ^jársz, hidd, hogy a ^fény vár ^rád!
+  \endverse
+
+  \beginverse*
+    Refrén
   \endverse
 
 \endsong
