--- a/songs/vak-ember.tex
+++ b/songs/vak-ember.tex
@@ -1,5 +1,7 @@
 \beginsong{A vak ember - !!}[]
 
+  \versesep=12pt plus 3pt minus 8pt
+
   \ifchorded
     \beginverse*
       {\nolyrics Előjáték: \[Am] \[G] \[F] \[E]}
@@ -24,30 +26,30 @@
     A ^néma is ^az úton ^ül és tátog, \rep{2}
     A \[Am]néma is \[G]az úton \[F]ül és \[E]kiált: -- ez itt így jó?
   \endverse
-  
+
   \beginverse
     S ?mi? \[Am]mind csak ü\[G]lünk, és a \[F]szívünk ki\[E]ált, \rep{3} -- kell ide "mi"?
   \endverse
-  
+
   \beginverse
     De \[Am]Jézus is \[G]ott ül ve\[F]lünk és ki\[E]ált, \rep{3}
     Oh, oh, \[E7]oh!
     Én vagyok az {\[Am G F]ú}t, az igazs{\[Am G F]á}g, és az élet,
     Ami haza\[E]visz! Oh, \[E7]oh, oh, \[E]oh, oh, \[E7]oh, oh, oh! (- Egyel kevesebb oh?)
   \endverse
-  
+
   \beginverse*
     \[Am]Jézus \rep{2}
   \endverse
-  
+
   \beginverse*
     Oh, oh, \[E7]oh!
     Én vagyok az {\[Am G F]ú}t, az igazs{\[Am G F]á}g, és az élet,
     Ami haza\[E]visz! Oh, \[E7]oh, oh, \[E]oh, oh, \[E7]oh, oh, oh! (- Egyel kevesebb oh?)
   \endverse
-  
+
   \beginverse*
     \[Am]Jézus
   \endverse
-  
+
 \endsong
