--- a/songs/vilagnak-krisztus-kell.tex
+++ b/songs/vilagnak-krisztus-kell.tex
@@ -2,10 +2,10 @@
 
   \ifchorded
     \beginverse*
-      {\nolyrics Ej: \[E] \[H7] \[E] \[A] \[E]}
+      {\nolyrics Előjáték: \[E] \[H7] \[E] \[A] \[E]}
     \endverse
   \fi
-  
+
   \beginchorus
     /: A \[E]világnak \[H7] Krisztus \[E]kell!
     A \[A]világnak \[E] Krisztus \[H7]kell!
