--- a/compilations/temp.tex
+++ b/compilations/temp.tex
@@ -7,8 +7,8 @@
 \usepackage{graphicx}
 \graphicspath{ {images/} }
 
-% \usepackage[chorded]{songs}
-\usepackage[lyric]{songs}
+\usepackage[chorded]{songs}
+% \usepackage[lyric]{songs}
 % \usepackage[slides]{songs}
 
 \title{Temp}
@@ -41,9 +41,25 @@
   \versesep=12pt plus 3pt minus 5pt
 
   \begin{songs}{}
-    \input{songs/hus-ver-templom.tex}
-    \input{songs/im-itt-jon-o.tex}
-    \input{songs/hus-ver-templom.tex}
-    \input{songs/im-itt-jon-o.tex}
+    \input{songs/jezus-nez-ram.tex}
+    % \setcounter{songnum}{1}
+    % \input{songs/jezus-nez-ram.tex}
+    % \setcounter{songnum}{1}
+    % \input{songs/jezus-nez-ram.tex}
+    % \setcounter{songnum}{1}
+    % \input{songs/jezus-nez-ram.tex}
+    % \setcounter{songnum}{1}
+    % \input{songs/jezus-nez-ram.tex}
+
+    % \setcounter{songnum}{1}
+    % \input{songs/jezus-nez-ram.tex}
+    % \setcounter{songnum}{1}
+    % \input{songs/jezus-nez-ram.tex}
+    % \setcounter{songnum}{1}
+    % \input{songs/jezus-nez-ram.tex}
+    % \setcounter{songnum}{1}
+    % \input{songs/jezus-nez-ram.tex}
+    % \setcounter{songnum}{1}
+    % \input{songs/jezus-nez-ram.tex}
   \end{songs}
 \end{document}
