Added some songs

--- a/songs/kicsiny-kis-fenyemmel.tex
+++ b/songs/kicsiny-kis-fenyemmel.tex
@@ -3,24 +3,24 @@
   \beginverse\memorize
     \[G]Kicsiny kis fényemmel világítani fogok.
     \[C]Kicsiny kis fényemmel világítani fo\[G]gok.
-    Kicsiny kis fényemmel \[Hm]világítani fo\[Em]gok.
+    Kicsiny kis fényemmel \[H7]világítani fo\[Em]gok.
     Áldom \[D]Őt minden \[D7]nap és minden\[G]hol. \[C] \[G]
   \endverse
-  
+
   \beginverse
     ^Elrejtsem-e fényemet? Nem! Világítani fogok.
     ^Elrejtsem-e fényemet? Nem! Világítani fo^gok.
     Elrejtsem-e fényemet? Nem! ^Világítani fo^gok.
     Áldom ^Őt minden ^nap és minden^hol. ^ ^
   \endverse
-  
+
   \beginverse
     A ^Sátán sem állíthat meg! Nem! Világítani fogok.
     A ^Sátán sem állíthat meg! Nem! Világítani fo^gok.
     A Sátán sem állíthat meg! Nem! ^Világítani fo^gok.
     Áldom ^Őt minden ^nap és minden^hol. ^ ^
   \endverse
-  
+
   \beginverse
     ^Így teszek, míg Jézus jön! Igen! Világítani fogok.
     ^Így teszek, míg Jézus jön! Igen! Világítani fo^gok.
