Checked songs + added some new ones with Eszter

--- a/compilations/2017-BIN.tex
+++ b/compilations/2017-BIN.tex
@@ -7,8 +7,8 @@
 \usepackage{graphicx}
 \graphicspath{ {images/} }
 
-% \usepackage[chorded]{songs}
-\usepackage[lyric]{songs}
+\usepackage[chorded]{songs}
+% \usepackage[lyric]{songs}
 % \usepackage[slides]{songs}
 
 \title{Budaörsi Ifjúsági Nap - Mise}
@@ -54,8 +54,8 @@
     \begin{intersong*}\section*{Kyrie}\end{intersong*}
     \input{mass-songs/uram-irgalmazz-k159.tex}
 
-%     \begin{intersong*}\section*{Zsoltár}\end{intersong*}
-%     \input{mass-songs/zsoltar.tex}
+    \begin{intersong*}\section*{Zsoltár}\end{intersong*}
+    \input{mass-songs/zsoltar.tex}
 
     \begin{intersong*}\section*{Felajánlás}\end{intersong*}
     \input{songs/loyolai-szent-ignac-imaja.tex}
