--- a/compilations/antiochia.tex
+++ b/compilations/antiochia.tex
@@ -78,7 +78,7 @@
   \vfill
   Benkő Matyitól kapott dalgyűjtemény alapján.
 
-  Készítette: Donkó István
+  Készítette: Balics Eszter és Donkó István
 
   ?Lektorálta: Nobilis Márió?
 
