--- a/compilations/temp.tex
+++ b/compilations/temp.tex
@@ -7,8 +7,8 @@
 \usepackage{graphicx}
 \graphicspath{ {images/} }
 
-\usepackage[chorded]{songs}
-% \usepackage[lyric]{songs}
+% \usepackage[chorded]{songs}
+\usepackage[lyric]{songs}
 % \usepackage[slides]{songs}
 
 \title{Temp}
@@ -41,25 +41,25 @@
   \versesep=12pt plus 3pt minus 5pt
 
   \begin{songs}{}
-    \input{songs/jezus-nez-ram.tex}
-    % \setcounter{songnum}{1}
-    % \input{songs/jezus-nez-ram.tex}
-    % \setcounter{songnum}{1}
-    % \input{songs/jezus-nez-ram.tex}
-    % \setcounter{songnum}{1}
-    % \input{songs/jezus-nez-ram.tex}
-    % \setcounter{songnum}{1}
-    % \input{songs/jezus-nez-ram.tex}
-
-    % \setcounter{songnum}{1}
-    % \input{songs/jezus-nez-ram.tex}
-    % \setcounter{songnum}{1}
-    % \input{songs/jezus-nez-ram.tex}
-    % \setcounter{songnum}{1}
-    % \input{songs/jezus-nez-ram.tex}
-    % \setcounter{songnum}{1}
-    % \input{songs/jezus-nez-ram.tex}
-    % \setcounter{songnum}{1}
-    % \input{songs/jezus-nez-ram.tex}
+    \setcounter{songnum}{0}
+    \input{mass-songs/ket-kezemben-k119.tex}
+    \setcounter{songnum}{0}
+    \input{mass-songs/ket-kezemben-k119.tex}
+    \setcounter{songnum}{0}
+    \input{mass-songs/ket-kezemben-k119.tex}
+    \setcounter{songnum}{0}
+    \input{mass-songs/ket-kezemben-k119.tex}
+    \setcounter{songnum}{0}
+    \input{mass-songs/ket-kezemben-k119.tex}
+    \setcounter{songnum}{0}
+    \input{mass-songs/ket-kezemben-k119.tex}
+    \setcounter{songnum}{0}
+    \input{mass-songs/ket-kezemben-k119.tex}
+    \setcounter{songnum}{0}
+    \input{mass-songs/ket-kezemben-k119.tex}
+    \setcounter{songnum}{0}
+    \input{mass-songs/ket-kezemben-k119.tex}
+    \setcounter{songnum}{0}
+    \input{mass-songs/ket-kezemben-k119.tex}
   \end{songs}
 \end{document}
