--- a/songs.tex
+++ b/songs.tex
@@ -1,25 +1,38 @@
 \input{songs/add-tovabb.tex}
 \input{songs/adjunk-halat.tex}
+\input{songs/aldasoddal-megyunk.tex}
+\input{songs/aldjad-en-lelkem-az-urat.tex}
 \input{songs/aldjatok-az-urat.tex}
+\input{songs/aldott-legy-uram.tex}
 \input{songs/antioch-dal.tex}
+\input{songs/aroni-aldas.tex}
+\input{songs/atyam-ket-kezedben.tex}
+\input{songs/atyam-tied-vagyok.tex}
 \input{songs/bizom-benned.tex}
 \input{songs/csak-jezusnak-szolgalok.tex}
 \input{songs/ebredj-ember.tex}
+\input{songs/en-uram-en-istenem.tex}
 \input{songs/feny-ami-bennem-eg.tex}
 \input{songs/foltamadt-alleluja.tex}
 \input{songs/ha-jon-az-ur.tex}
+\input{songs/halat-adok-hogy-itt-a-reggel.tex}
 \input{songs/hus-ver-templom.tex}
 \input{songs/im-itt-jon-o.tex}
 \input{songs/indulj-a-vilagba.tex}
 \input{songs/indulj-es-menj.tex}
 \input{songs/jezus-nez-ram.tex}
+\input{songs/jo-az-urban-bizakodni.tex}
+\input{songs/jojj-hivunk-jojj.tex}
 \input{songs/jojj-itt-az-ido.tex}
+\input{songs/kesz-az-en-szivem.tex}
+\input{songs/ket-kezemben.tex}
 \input{songs/kicsiny-kis-fenyemmel.tex}
 \input{songs/kiraly-vagy.tex}
 \input{songs/koszonom-jezus.tex}
 \input{songs/krisztus-el-bennem.tex}
 \input{songs/latod-ujra-este-van.tex}
 \input{songs/loyolai-szent-ignac-imaja.tex}
+\input{songs/melybol-hozzad-szall-szavam.tex}
 \input{songs/minden-mi-el.tex}
 \input{songs/minden-nap.tex}
 \input{songs/most-nem-sietek.tex}
@@ -40,6 +53,7 @@
 \input{songs/terad-var-egy-szep-orszag.tex}
 \input{songs/teremts-bennem.tex}
 \input{songs/uram-tehozzad-futok.tex}
+\input{songs/urra-var-a-szivunk.tex}
 \input{songs/utad-var-rad.tex}
 \input{songs/vak-ember.tex}
 \input{songs/vilagnak-krisztus-kell.tex}
