--- a/songs/add-tovabb.tex
+++ b/songs/add-tovabb.tex
@@ -1,6 +1,6 @@
-\beginsong{Add tovább}
+\beginsong{Add tovább - !!}
 [
-  index={Add tovább}
+  index={Nagy tűz, hatalmas láng}
 ]
 
   \ifchorded
@@ -11,17 +11,17 @@
 
   \beginverse\memorize
     Nagy \[D]tűz, hatalmas \[F#m]láng, csak egy \[G]szikra az, amitől \[A]kigyullad. \echo{amitől \[A7]kigyullad}
-    \[D]Melegét szórja \[F#m]rád, csak a \[G]kezed kell, hogy o\[A]danyújtsad. \echo{hogy o\[A7]danyújtsad}
+    \[D]Melegét szórja \[F#m]rád, csak a \[G]kezed kell, hogy oda\[A]nyújtsad. \echo{hogy oda\[A7]nyújtsad}
   \endverse
 
   \beginchorus
     \[G]Épp így az Isten \[D]szeretetét, \[Em] ha egyszer el\[A]fogad\[D]tad,
-    Már \[G]nem kí\[D]vánsz \[G]semmi \[D]mást, csak \[G]azt, hogy \[A]add to\[D]vább.	
+    Már \[G]nem kí\[D]vánsz \[G]semmi \[D]mást, csak \[G]azt, hogy \[A]add to\[D]vább.
   \endchorus
 
   \beginverse
     Az ^első napsu^gár, mi a ^dermedt tavaszi ^földre száll. \echo{tavaszi ^földre száll}
-    ^Melegét szórja ^rád, és a ^fák rügyeiket ^kibontják. \echo{^kibontják}
+    ^Melegét szórja ^rád, és a ^fák rügyeiket ^kibontják. \echo{rügyeiket ^kibontják}
   \endverse
 
   \beginverse*
@@ -29,7 +29,7 @@
   \endverse
 
   \beginverse
-    ^Szívemben boldog^ság, mert az ^Úr, az Isten az ^én Atyám. \echo{az ^én Atyám}
+    ^Szívemben boldog^ság, mert az ^Úr, az Isten az ^én Atyám. \echo{igen, az ^én Atyám}
     ^Lelkemben ég a ^vágy, hogy ^megtegyem az Ő ^akaratát. \echo{az Ő ^akaratát}
   \endverse
 
