--- a/songs/adjunk-halat.tex
+++ b/songs/adjunk-halat.tex
@@ -1,8 +1,10 @@
 \beginsong{Adjunk hálát}[]
 
+  \versesep=12pt plus 3pt minus 8pt
+
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték: \[G-C] \[G]}
+      {\nolyrics Előjáték: \[G] \[C] \[G]}
     \endverse
   \fi
 
@@ -14,15 +16,15 @@
   \endverse
 
   \beginchorus
-    Allelu\[Bm]ja, az Úr az \[Em]Isten!
+    Allelu\[Hm]ja, az Úr az \[Em]Isten!
     Allelu\[Am]ja, a megvál\[D]tó!
-    Allelu\[Bm]ja, az Úr az \[Em]Isten!
-    Zengj alle\[Am]luját! \[D7]Á\[G-C]men! \[G]
+    Allelu\[Hm]ja, az Úr az \[Em]Isten!
+    Zengj alle\[Am]luját! \[D7]Á\[G]men! \[C] \[G]
   \endchorus
 
   \beginverse
-    Az Ő ^teste ^és ^vé^re
-    Táplál ^minket ^itt a ^földön,
+    Az Ő ^tes^te és ^vé^re
+    Táplál ^minket ^itt a ^Földön,
     Gyere ^és ö^rülj, velünk ^ünne^pelj,
     Tiszta ^szívvel ^áldjuk ^Őt!
   \endverse
