--- a/songs/aldjatok-az-urat.tex
+++ b/songs/aldjatok-az-urat.tex
@@ -1,13 +1,13 @@
 \beginsong{Áldjátok az Urat}[]
 
   \beginverse*
-    /: \[Em]Áldjátok az Ur\[Am]at, áldjátok szent Ne\[Em]vét,
+    /: \[Em]Áldjátok az Ur\[Am]at, áldjátok szent ne\[Em]vét,
     Kik \[Em]házában álltok \[D]napról-napra, \[Hm]dicsérjétek szüntelen \[Em]Őt! :/ \rep{2}
   \endverse
 
   \beginverse*
-    /: \[Am]Tárjátok kezeitek az élő Isten fe\[Em]lé!
-    \[Am]Áldjon meg téged \[Em]Sionból az úr, \[D]ragyogtassa \[Hm]arcát re\[Em]ád! :/ \rep{2}
+    /: \[Em]Tárjátok kezei\[Am]tek az élő Isten fe\[Em]lé!
+    \[Am]Áldjon meg téged \[Em]Sionból az Úr, \[D]ragyogtassa \[Hm]arcát re\[Em]ád! :/ \rep{2}
   \endverse
 
 \endsong
