--- a/songs/bizom-benned.tex
+++ b/songs/bizom-benned.tex
@@ -1,17 +1,23 @@
-\beginsong{Bízom benned}[]
+\beginsong{Bízom Benned}[]
+
+  \ifchorded
+    \beginverse*
+      {\nolyrics Előjáték: \[G] \[C9] \[Em7] \[D]}
+    \endverse
+  \fi
 
   \beginchorus
-    \[G]Bízom \[C9]benned, \[Em7]igazságos \[D]Úr vagy,
-    \[G]Bízom \[C9]benned, \[Em7]irgalmas, \[D]jó!
-    \[G]Bízom \[C9]benned \[Em7]minden\[D]nap, örö\[G]kké! \[C9] \[Em7] \[D]
+    \[G]Bízom \[C9]Benned, \[Em7]igazságos \[D]Úr vagy,
+    \[G]Bízom \[C9]Benned, \[Em7]irgalmas, \[D]jó!
+    \[G]Bízom \[C9]Benned \[Em7]minden\[D]nap, örö\[G]kké! \[C9] \[Em7] \[D]
   \endchorus
-  
+
   \beginverse\memorize
     \[G] Olyan messziről jöttem \[Am7]én,
     És Te \[F]megvár\[C]tál, sokat \[G] vártál \[D]rám,
     \[G] Úgy hívlak a magány éjje\[Am7]lén,
     Mikor \[F]elvész a \[C]szó, mikor csak \[G]átölelni \[D]jó!
-    \[Am]Tudom, hogy \[Em]távol voltam, \[G]fájt ne\[D]ked.
+    \[Am]Tudom, hogy \[Em]távol voltam, \[G]fájt Ne\[D]ked.
     \[Am]Tudom, hogy \[Em]nélküled nem \[C]élhe\[D]tek.
   \endverse
 
@@ -25,7 +31,7 @@
     ^ Hallod hangom lágy ne^szét,
     Kérlek, ^szólj hoz^zám, mikor csak ^Téged hív a ^szám!
     ^Életem ^nem féltem, hisz ^jó Ve^led.
-    ^Tudom, hogy ^Nélküled nem ^élhe^tek!
+    ^Tudom, hogy ^nélküled nem ^élhe^tek!
   \endverse
 
   \beginverse*
