--- a/songs/feny-ami-bennem-eg.tex
+++ b/songs/feny-ami-bennem-eg.tex
@@ -18,40 +18,20 @@
     Legyen ^fény, legyen ^fény, legyen ^fény! ^ ^ ^
   \endverse
 
-  \beginverse
-    A Szent Imre minden sarkában…
-  \endverse
+  \versesep=0pt
 
   \beginverse
     Budaörs minden sarkában…
-  \endverse
-
-  \beginverse
+    A Szent Imre minden sarkában…
     A Szent Ferenc minden sarkában…
-  \endverse
-
-  \beginverse
     Szentendre minden sarkában…
-  \endverse
-
-  \beginverse
     Fehérvár minden sarában…
-  \endverse
-
-  \beginverse
     Kanizsa minden sarkában…
-  \endverse
-
-  \beginverse
     Szeged minden sarkában…
-  \endverse
-
-  \beginverse
     Kaposvár minden sarkában…
-  \endverse
-
-  \beginverse
     Pécs minden sarkában…
+    Sopron minden sarkában…
+    Sydney minden sarkában…
   \endverse
 
 \endsong
