--- a/songs/hus-ver-templom.tex
+++ b/songs/hus-ver-templom.tex
@@ -10,18 +10,22 @@ by={Pintér Béla}
     \endverse
   \fi
 
-  \beginverse
+  \beginchorus
     /: Nekem \[Dm]nincs más \[Gm]rajtad \[C]kívül \[F]Jézus,
     \[Dm]Éle\[Gm]tem for\[C]rása \[F]vagy.
     \[Dm]Kézzel, \[Gm7]lábbal, \[A]szívvel, \[Dm]szájjal
-    \[A#]Dícsérlek Uram. \[A4] \[A] :/ \rep{2}
-  \endverse
+    \[A#]Dicsérlek Uram. \[A4] \[A] :/ \rep{2}
+  \endchorus
 
   \beginverse
-    Ez a \[Dm]hús-vér \[Gm]templom \[A]érted \[Dm]épült,
+    Ez a \[Dm]hús-vér \[Gm]templom \[A]Érted \[Dm]épült,
     Neked \[A#]ég a \[Gm7]tűz, bent \[A]oltárai\[Dm]nál.
-    Ez a hús-Vér \[Gm]templom \[A]téged \[Dm]dícsér,
-    Szívem \[A#]minden \[Gm7]húrja \[A]rólad muzsi\[Dm]kál.
+    Ez a hús-vér \[Gm]templom \[A]Téged \[Dm]dicsér,
+    Szívem \[A#]minden \[Gm7]húrja \[A]Rólad muzsi\[Dm]kál.
+  \endverse
+
+  \beginverse*
+    Refrén
   \endverse
 
 \endsong
