--- a/songs/im-itt-jon-o.tex
+++ b/songs/im-itt-jon-o.tex
@@ -8,14 +8,14 @@
   \fi
 
   \beginchorus
-    /: Ím, \[Em]itt jön Ő átkel \[Hm]a hegyen
+    /: Ím, \[Em]itt jön Ő átkel \[Hm]a hegyen,
     a \[Em]dombon át sza\[C]lad felém a \[Hm]kedve\[Em]sem! :/ \rep{2}
   \endchorus
 
   \beginverse\memorize
-    Hát \[G]jöjj Uram, lásd ti\[D]éd a szívem, 
-    A \[Em]kerted téged vár a szőlőd \[H]is terem. 
-    A \[G]szív dalol, zengi \[D]énekét: 
+    Hát \[G]jöjj Uram, lásd Ti\[D]éd a szívem,
+    A \[Em]kerted Téged vár a szőlőd \[H]is terem.
+    A \[G]szív dalol, zengi \[D]énekét:
     A \[Em]lelkem ég ó \[C]Istenem sze\[Hm]relme\[Em]dért.
   \endverse
 
@@ -24,10 +24,10 @@
   \endverse
 
   \beginverse
-    Úgy ^vágyom Uram, ünne^pelni veled, 
-    Meg^részegít a bor s a méz mit ^adsz nekem. 
-    Ha ^elfogadod minden ^kincsemet, 
-    én ^átadom az ^életem ti^éd le^gyen!
+    Úgy ^vágyom Uram, ünne^pelni Veled,
+    Meg^részegít a bor s a méz mit ^adsz nekem.
+    Ha ^elfogadod minden ^kincsemet,
+    én ^átadom az ^életem Ti^éd le^gyen!
   \endverse
 
   \beginverse*
