--- a/songs/indulj-a-vilagba.tex
+++ b/songs/indulj-a-vilagba.tex
@@ -1,8 +1,8 @@
-\beginsong{Indulj a világba -- Előjáték jelölés??? - kell "És" az "az Úr elé?"}[]
+\beginsong{Indulj a világba - !!}[]
 
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték: \[D] \[D-=Db] \[D] \[D-=Db]}
+      {\nolyrics Előjáték: /: \[D] \[D] \[D] \[D-Db] :/ \rep{2}}
     \endverse
   \fi
 
@@ -36,25 +36,25 @@
 
   \beginverse
     ^Az Úr, az Úr, ki a közösséget építi,
-    És ^az Úr, az Úr, ki a közösséget építi,
-    És ^az Úr, az Úr, ki a közösséget építi,
+    ^Az Úr, az Úr, ki a közösséget építi,
+    ^Az Úr, az Úr, ki a közösséget építi,
     És ^tovább szeretné ad^ni!
   \endverse
-  
+
   \beginverse
     ^A szeretet, a szeretet, ki a közösséget építi,
-    És ^a szeretet, a szeretet, ki a közösséget építi,
-    És ^a szeretet, a szeretet, ki a közösséget építi,
+    ^A szeretet, a szeretet, ki a közösséget építi,
+    ^A szeretet, a szeretet, ki a közösséget építi,
     És ^tovább szeretné ad^ni!
   \endverse
-  
+
   \beginverse
     ^Az Antioch, az Antioch, ki a közösséget építi,
-    És ^az Antioch, az Antioch, ki a közösséget építi,
-    És ^az Antioch, az Antioch, ki a közösséget építi,
+    ^Az Antioch, az Antioch, ki a közösséget építi,
+    ^Az Antioch, az Antioch, ki a közösséget építi,
     És ^tovább szeretné ad^ni!
   \endverse
-  
+
   \beginverse
     ^És én, és te, és mi, az Úr, a szeretet, az Antioch, ki a közösséget építi,
     És ^én, és te, és mi, az Úr, a szeretet, az Antioch, ki a közösséget építi,
