--- a/songs/indulj-es-menj.tex
+++ b/songs/indulj-es-menj.tex
@@ -30,9 +30,9 @@
 
   \beginverse
     ^Népemnek ^őrévé ^rendellek ^én,
-    ^lelkemet ^adom mel^léd!
+    ^Lelkemet ^adom mel^léd!
   \endverse
-  
+
   \beginverse*
     Refrén
   \endverse
