--- a/songs/minden-nap.tex
+++ b/songs/minden-nap.tex
@@ -1,25 +1,27 @@
-\beginsong{Minden nap - !!}[]
+\beginsong{Minden nap}
+[
+by={Pintér Béla}
+index={Mit is mondhatnék}
+]
 
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték: \[C] \[G] \[Em] \[D]}
+      {\nolyrics Előjáték: \[D] \[A] \[F#m] \[E]}
     \endverse
   \fi
 
   \beginverse\memorize
-    \[C] Mit is \[G]mondhatnék, \[Em] Te vagy, ki \[D]megváltottál,
-    \[C] Drága \[G]véreddel \[Em] hófe\[D]hérre mostál,
-    \[C] Minden\[G]em lettél, \[Em] tiéd az \[D]egész lényem,
-    \[C] Ég a \[G]tűz bennem, \[Em] csak \[D]érted élek már!
+    \[D] Mit is \[A]mondhatnék, \[F#m] Te vagy, ki \[E]megváltottál,
+    \[D] Drága \[A]véreddel \[F#m] hófe\[E]hérre mostál,
+    \[D] Minden\[A]em lettél, \[F#m] tiéd az \[E]egész lényem,
+    \[D] Ég a \[A]tűz bennem, \[F#m] csak \[E]érted élek \[A]már! \[D] \[F#m] \[E]
   \endverse
 
   \ifchorded
     \beginverse*
-      {\nolyrics Közjáték: \[G] \[C] \[Em] \[D]}
+      {\nolyrics Közjáték: \[A] \[D] \[F#m] \[E]}
     \endverse
   \fi
-
-% közjáték -> utána ugyanaz
 
   \beginverse
     ^ Minden ^nap, Uram, ^ ráál^lok igédre,
@@ -29,14 +31,18 @@
   \endverse
 
   \beginchorus
-    /: \[G] Minden \[C]nap csak \[Em]érted \[D]élek.
-    \[G] Minden \[C]nap kö\[Em]vetlek \[D]Téged.
-    \[G] Minden \[C]nap Ve\[Em]led já\[D]rom u\[G]tam. \[C] \[Em] \[D] :/ \rep{2}
+    /: \[A] Minden \[D]nap csak \[F#m]érted \[E]élek.
+    \[A] Minden \[D]nap kö\[F#m]vetlek \[E]Téged.
+    \[A] Minden \[D]nap Ve\[F#m]led já\[E]rok u\[A]ram. \[D] \[F#m] \[E] :/ \rep{2}
   \endchorus
 
   \beginverse
-    /: \[G]Érted \[C]élek \[Em]minden \[D]nap. :/ \rep{3}
-    U\[G]ram \[C] \[Em] \[D]
+    /: \[A]Érted \[D]élek \[F#m]minden \[E]nap. :/ \rep{3}
+    U\[A]ram \[D] \[F#m] \[E]
+  \endverse
+
+  \beginverse
+    Refrén \rep{2}
   \endverse
 
 \endsong
