--- a/songs/szeretem-orokke.tex
+++ b/songs/szeretem-orokke.tex
@@ -1,4 +1,7 @@
-\beginsong{Szeretem örökké}[]
+\beginsong{Szeretem örökké}
+[
+  index={Eléd lépek, jó uram}
+]
 
   \beginverse\memorize
     \[C]Eléd lépek, jó Uram, hol \[G/H]béke és nyugalom \[Am]vár,
