--- a/songs/csak-jezusnak-szolgalok.tex
+++ b/songs/csak-jezusnak-szolgalok.tex
@@ -2,36 +2,36 @@
 
   \beginchorus
     Csak \[G]Jézus\[D]nak \[Em]szolgá\[C]lok, az \[G]Ő or\[C]szágát \[G]vá\[D]rom,
-    Mert \[G]eljön \[D]Ő, az \[C]Üdvözí\[Eb]tő, ó \[G]Jézus, \[D]feltámadt Ki\[G-C-G]rály!
+    Mert \[G]eljön \[D]Ő, az \[C]Üdvözí\[D#]tő, ó \[G]Jézus, \[D]feltámadt Ki\[G]rály! \[C] \[G]
   \endchorus
 
   \beginverse\memorize
-    \[Em]Áldjad, lelkem \[Hm]Őt, \[Em]dicsérd Terem\[Hm]tőd, \[G]Most és \[C]mindörökké, \[G]á\[D]men!
+    \[Em]Áldjad, lelkem \[Hm]Őt, \[Em]dicsérd Terem\[Hm]tőd, \[G]most és \[C]mindörökké, \[G]á\[D]men!
     \[Em]Áldjad, minden \[Hm]nép, \[C]dicsérd szent Ne\[G]vét, \[G]most és \[C]mindörökké, \[D]á\[G]men!
   \endverse
 
   \beginverse
-    ^Hálát adja^tok, ^áldást mondja^tok, ^Most és ^mindörökké, ^á^men!
+    ^Hálát adja^tok, ^áldást mondja^tok, ^most és ^mindörökké, ^á^men!
     ^Egyházad di^csér ^nagy jóságo^dért, ^most és ^mindörökké, ^á^men!
   \endverse
 
   \beginverse
-    ^Erős vár az ^Úr, ^menedéket ^nyújt, ^Most és ^mindörökké, ^á^men!
+    ^Erős vár az ^Úr, ^menedéket ^nyújt, ^most és ^mindörökké, ^á^men!
     ^Áldott irga^lom, ^véred olta^lom, ^most és ^mindörökké, ^á^men!
   \endverse
 
   \beginverse
-    ^Hatalmas az ^Úr, ^jóságos az ^Úr, ^Most és ^mindörökké, ^á^men!
-    ^Szívem áldja ^Őt, ^ujjongjon a ^föld, ^most és ^mindörökké, ^á^men!
+    ^Hatalmas az ^Úr, ^jóságos az ^Úr, ^most és ^mindörökké, ^á^men!
+    ^Szívem áldja ^Őt, ^ujjongjon a ^Föld, ^most és ^mindörökké, ^á^men!
   \endverse
 
   \beginverse
-    ^Szentek, angya^lok, ^szeráfkóru^sok, ^Most és ^mindörökké, ^á^men!
+    ^Szentek, angya^lok, ^szeráfkóru^sok, ^most és ^mindörökké, ^á^men!
     ^Néked zenge^nek, ^így ünnepel^nek, ^most és ^mindörökké, ^á^men!
   \endverse
 
   \beginverse
-    ^Áldott légy ^Atya, ^s Egyszülött ^Fia, ^Most és ^mindörökké, ^á^men!
+    ^Áldott légy ^Atya, ^s egyszülött ^Fia, ^most és ^mindörökké, ^á^men!
     ^Éltető Lé^lek, ^Téged dicsér^lek, ^most és ^mindörökké, ^á^men!
   \endverse
 
