--- a/songs/ha-jon-az-ur.tex
+++ b/songs/ha-jon-az-ur.tex
@@ -8,32 +8,32 @@
 
   \beginverse\memorize
     Ha jön az \[E]Úr, ha visszatér, ha jön az Úr, ha vissza\[H7]tér,
-    Hívj, A\[E]tyám, a \[E7]szentek \[A]közé, \[Am] ha jön az \[E]Úr, ha \[H7]vissza\[E-A]tér! \[E!]
+    Hívj, A\[E]tyám, a \[E7]szentek \[A]közé, \[Am] ha jön az \[E]Úr, ha \[H7]vissza\[E]tér! \[A] \[E!]
   \endverse
 
   \beginverse
     Ha minden ^szent életre kél, ha minden szent életre ^kél,
-    Hívj, A^tyám, a ^szentek ^közé, ^ ha jön az ^Úr, ha ^vissza^tér! ^
+    Hívj, A^tyám, a ^szentek ^közé, ^ ha minden ^szent é^letre ^kél! ^ ^
   \endverse
 
   \beginverse
     Ha zengik ^mind, alleluja, ha zengik mind, allelu^ja,
-    Hívj, A^tyám, a ^szentek ^közé, ^ ha jön az ^Úr, ha ^vissza^tér! ^
+    Hívj, A^tyám, a ^szentek ^közé, ^ ha zengik ^mind al^lelu^ja! ^ ^
   \endverse
 
   \beginverse
-    Ha ég és ^föld új arcot ölt, ha ég és föld új arcot ^ölt,
-    Hívj, A^tyám, a ^szentek ^közé, ^ ha jön az ^Úr, ha ^vissza^tér! ^
+    Ha ég és ^Föld új arcot ölt, ha ég és Föld új arcot ^ölt,
+    Hívj, A^tyám, a ^szentek ^közé, ^ ha ég és ^Föld új ^arcot ^ölt! ^ ^
   \endverse
 
   \beginverse
     A mennyben ^fenn, oly’ nagy a csend, elvétve egy-két hárfa ^zeng,
-    De nem így ^lesz, ó, ^alle^luja, ^ ha egyszer ^én is ^ott le^szek! ^
+    De nem így ^lesz, ó, ^alle^luja, ^ ha egyszer ^én is ^ott le^szek! ^ ^
   \endverse
 
   \beginverse
     Nem sakko^zik, nem golfozik, egy rendes angyal nem i^szik,
-    Így éne^kel, ó ^alle^luja, ^ miközben ^rock n’ ^rollo^zik! ^
+    Így éne^kel, ó ^alle^luja, ^ miközben ^rock n’ ^rollo^zik! ^ ^
   \endverse
 
 \endsong
