--- a/songs.tex
+++ b/songs.tex
@@ -6,6 +6,7 @@
 \input{songs/aldott-legy-uram.tex}
 \input{songs/antioch-dal.tex}
 \input{songs/aroni-aldas.tex}
+\input{songs/atya-teremto.tex}
 \input{songs/atyam-ket-kezedben.tex}
 \input{songs/atyam-tied-vagyok.tex}
 \input{songs/bizom-benned.tex}
@@ -20,6 +21,7 @@
 \input{songs/im-itt-jon-o.tex}
 \input{songs/indulj-a-vilagba.tex}
 \input{songs/indulj-es-menj.tex}
+\input{songs/itt-vagyok-most-jo-uram.tex}
 \input{songs/jezus-nez-ram.tex}
 \input{songs/jo-az-urban-bizakodni.tex}
 \input{songs/jojj-hivunk-jojj.tex}
