--- a/songs/halat-adok-hogy-itt-a-reggel.tex
+++ b/songs/halat-adok-hogy-itt-a-reggel.tex
@@ -17,7 +17,7 @@
   \beginverse
     ^Hálá^t adok, hogy ^munkát ^küldesz,
     ^Hálá^t adok, hogy ^fény ra^gyog.
-    ^Hálá^t adok, hogy ^lelkem fényes
+    ^Hálá^t adok, hogy ^lelkem ^fényes
     ^És bol^dog va^gyok.
   \endverse
 
@@ -25,7 +25,7 @@
     ^Hálá^t adok a ^vidám ^percért,
     ^Hálá^t, ha szomo^rú le^szek.
     ^Hálá^t adok, hogy ^adsz e^lém célt
-    ^É^s ke^zed ve^zet.
+    ^És ke^zed ve^zet.
   \endverse
 
   \beginverse
