--- a/songs/indulj-a-vilagba.tex
+++ b/songs/indulj-a-vilagba.tex
@@ -2,7 +2,7 @@
 
   \ifchorded
     \beginverse*
-      {\nolyrics Előjáték: /: \[D] \[D] \[D] \[D-Db] :/ \rep{2}}
+      {\nolyrics Előjáték: /: \[D] \[D] \[D] \[D-D&] :/ \rep{2}}
     \endverse
   \fi
 
