--- a/songs/jojj-hivunk-jojj.tex
+++ b/songs/jojj-hivunk-jojj.tex
@@ -1,4 +1,4 @@
-\beginsong{Jöjj, hívunk, jöjj - !! Vigasztaló / Szabadító sorrend}[]
+\beginsong{Jöjj, hívunk, jöjj}[]
 
   \ifchorded
     \beginverse*
