--- a/songs/urra-var-a-szivunk.tex
+++ b/songs/urra-var-a-szivunk.tex
@@ -7,7 +7,7 @@
 
   \ifchorded
     \beginverse*
-      {\nolyrics ( Köztes: \[Dm] \[Hb] \[C]
+      {\nolyrics ( Köztes: \[Dm] \[A#] \[C]
       \[F] \[Dm] \[Em] \[A] )}
     \endverse
   \fi
