First sample version

--- a/compilations/antiochia.tex
+++ b/compilations/antiochia.tex
@@ -31,8 +31,8 @@
 \setlength{\headheight}{0cm}
 \setlength{\headsep}{0cm}
 
-\setlength{\oddsidemargin}{-1.3cm}
-\setlength{\evensidemargin}{-2cm}
+\setlength{\oddsidemargin}{-2cm}
+\setlength{\evensidemargin}{-1.3cm}
 
 \setlength{\textwidth}{13cm}
 \setlength{\textheight}{18cm}
@@ -64,6 +64,7 @@
 %     {\let\newpage\relax\maketitle}
   \end{titlepage}
 
+  \setcounter{page}{1}
   \showindex{Tartalomjegyzék}{titleidx}
 
   \pagenumbering{arabic}
@@ -76,10 +77,10 @@
 
   To be continued...
   \vfill
-  Benkő Matyitól kapott dalgyűjtemény alapján.
+  % Benkő Matyitól kapott dalgyűjtemény alapján.
 
   Készítette: Balics Eszter és Donkó István
 
-  ?Lektorálta: Nobilis Márió?
+  % ?Lektorálta: Nobilis Márió?
 
 \end{document}
