Added three songs and fixed others

--- a/songs.tex
+++ b/songs.tex
@@ -12,6 +12,7 @@
 \input{songs/bizom-benned.tex}
 \input{songs/csak-jezusnak-szolgalok.tex}
 \input{songs/ebredj-ember.tex}
+\input{songs/egyutt-fog-ujjongni.tex}
 \input{songs/en-uram-en-istenem.tex}
 \input{songs/feny-ami-bennem-eg.tex}
 \input{songs/foltamadt-alleluja.tex}
@@ -23,6 +24,7 @@
 \input{songs/indulj-es-menj.tex}
 \input{songs/itt-vagyok-most-jo-uram.tex}
 \input{songs/jezus-nez-ram.tex}
+\input{songs/jezus-var-terad.tex}
 \input{songs/jo-az-urban-bizakodni.tex}
 \input{songs/jojj-hivunk-jojj.tex}
 \input{songs/jojj-itt-az-ido.tex}
@@ -35,6 +37,7 @@
 \input{songs/latod-ujra-este-van.tex}
 \input{songs/loyolai-szent-ignac-imaja.tex}
 \input{songs/melybol-hozzad-szall-szavam.tex}
+\input{songs/mennek-az-asszonyok.tex}
 \input{songs/minden-mi-el.tex}
 \input{songs/minden-nap.tex}
 \input{songs/most-nem-sietek.tex}
