--- a/songs/melybol-hozzad-szall-szavam.tex
+++ b/songs/melybol-hozzad-szall-szavam.tex
@@ -20,28 +20,28 @@
     \[G]Uram \[H7]irgal\[Em]mazz!
   \endchorus
 
-  \beginverse\memorize
+  \beginverse
     Ha ^ajkam ^vétett ^elle^ned, ^Krisztus ^kegyel^mezz!
     A ^jóhírt ^zengjem ^csak ve^led, ^Krisztus ^kegyel^mezz!
   \endverse
 
   \beginchorus
-    ^Segíts! Segíts! ^Ne hagyj! Ne hagyj!
-    ^Nézd, ^ránk tör ^a bűn már,
-    ^Te adj! Te adj! ^Erőt! Erőt!
-    ^Krisztus ^kegyel^mezz!
+    \[Em!]Segíts! Segíts! \[Am!]Ne hagyj! Ne hagyj!
+    \[Em]Nézd, \[H7]ránk tör \[Em]a bűn már,
+    \[Em!]Te adj! Te adj! \[Am!]Erőt! Erőt!
+    \[G]Krisztus \[H7]kegyel\[Em]mezz!
   \endchorus
 
-  \beginverse\memorize
+  \beginverse
     Ha ^arcod ^fényét ^elfe^dem, ^Uram ^irgal^mazz!
     Te ^újból ^hívjál, ^Iste^nem, ^Uram ^irgal^mazz!
   \endverse
 
   \beginchorus
-    ^Segíts! Segíts! ^Ne hagyj! Ne hagyj!
-    ^Nézd, ^ránk tör ^a bűn már,
-    ^Te adj! Te adj! ^Erőt! Erőt!
-    ^Uram ^irgal^mazz!
+    \[Em!]Segíts! Segíts! \[Am!]Ne hagyj! Ne hagyj!
+    \[Em]Nézd, \[H7]ránk tör \[Em]a bűn már,
+    \[Em!]Te adj! Te adj! \[Am!]Erőt! Erőt!
+    \[G]Uram \[H7]irgal\[Em]mazz!
   \endchorus
 
 \endsong
