--- a/songs/mustarmag.tex
+++ b/songs/mustarmag.tex
@@ -1,8 +1,8 @@
 \beginsong{Mustármag - !!}[]
 
   \beginverse
-    /: Hogyha csak \[Am]mustármagnyi hitetek is \[E]volna... -
-    - ezt mondotta a mi U\[Am]runk. :/ \rep{2}
+    /: Hogyha csak \[Am]mustármagnyi hitetek is \[E]volna...
+    Ezt mondotta a mi U\[Am]runk. :/ \rep{2}
   \endverse
 
   \beginverse
