--- a/songs/napfiver-holdnover.tex
+++ b/songs/napfiver-holdnover.tex
@@ -1,11 +1,11 @@
-\beginsong{Napfivér, holdnővér - }[]
+\beginsong{Napfivér, holdnővér - !!}[]
 
   \ifchorded
     \beginverse*
       {\nolyrics Előjáték: \[D] \[D4] \[D] \[D4]}
     \endverse
   \fi
-  
+
   \beginverse\memorize
     \[D]Fívérem \[F#m]Nap, és \[G]nő\[A]vérem \[D]Hold,
     \[Hm]Oly’ ritkán \[F#m]látlak, s \[G]hallom \[A]hango\[D]tok.
